// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    viewing
    1
     
    expense
     
    235
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with 1 expense 2`] = `
<div>
  <h1>
    viewing
    23
     
    expenses
     
    254543535
  </h1>
</div>
`;
